# pycomo

./: .gitignore  LICENSE  README.md  config.json  example.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
examples/: simple_usage.py
pycomo/: __init__.py  config_schema.py  facade.py  factory.py  handlers.py  models.py  registry.py
pycomo/clients/: __init__.py  anthropic_client.py  base_client.py  openai_client.py
pycomo/config/: llm_config.py  model_config.py
pycomo/handlers/: response_handler.py  token_handler.py
pycomo/models/: anthropic_model.py  azure_model.py  base.py  deepseek_model.py  openai_model.py
